# flutter_automate

./: CHANGELOG.md  LICENSE  README.md  README_CN.md  pubspec.yaml
android/: .project  build.gradle  settings.gradle
android/libs/: autojs-release.aar  automator-release.aar  common-release.aar
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: CMakeLists.txt  quickjs_jni.cpp
doc/: ARCHITECTURE.md
docs/: API_DESIGN.md  AUTOJS_V8_API_REFERENCE.md
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/assets/automate/: index.yaml
example/assets/scripts/: baidu_search.js
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart  method.dart
example/lib/components/: button.dart  card.dart  schema.dart
example/lib/models/: pipeline.dart  user.dart
example/lib/net/: entity.dart  errors.dart  intercept.dart  requests.dart
example/lib/pages/: home.dart  login.dart  splash.dart
example/lib/services/: api.dart
example/lib/store/: user.dart
example/lib/utils/: global.dart  log.dart  platform.dart  storage.dart
example/lib/views/: pipeline.dart
example/macos/Flutter/: GeneratedPluginRegistrant.swift
example/test/: widget_test.dart
ios/: flutter_automate.podspec
ios/Classes/: FlutterAutomatePlugin.h  FlutterAutomatePlugin.m  SwiftFlutterAutomatePlugin.swift
lib/: agent_hid.dart  flutter_automate.dart  logview.dart
macos/: flutter_automate.podspec
macos/Classes/: FlutterAutomatePlugin.swift
test/: flutter_automate_test.dart
(+42 files in other folders)
